--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,11 +29,20 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.frischman.uri.flickrbrowser.MainActivity"/>
+            <meta-data android:name="android.app.searchable"
+                        android:resource="@xml/searchable"/>
+             <intent-filter>
+                 <action android:name="android.intent.action.SEARCH"/>
+             </intent-filter>
         </activity>
         <activity
             android:name=".PhotoDetailActivity"
             android:label="@string/title_activity_photo_detail"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.frischman.uri.flickrbrowser.MainActivity"/>
         </activity>
     </application>
 
